Add i386-pc-solaris2.7 for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -190,6 +190,13 @@ Successful (C):
 </tr>
 
 <tr>
+<td>i386-pc-solaris2.7</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01789.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>i386-pc-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Successful:
