--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -58,6 +58,13 @@ archived mail messages that reported the builds.</p>
 </tr>
 
 <tr>
+<td>alphaev5-dec-osf4.0g</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01927.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>alphaev5-dec-osf5.1</td>
 <td>&nbsp;</td>
 <td>Successful:
