2002-02-01  Phil Edwards  <pme@gcc.gnu.org>
	* index.html:  Mention new snapshot and doxygen project.

--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -39,8 +39,15 @@
 <h3>News</h3>
 
 <dl>
+ <dt>2002-02-01
+ <dd>A
+   <a href="http://gcc.gnu.org/ml/libstdc++/2002-02/msg00003.html">call
+   for /* comment */ writers</a> was posted to the community.
+ <dt>2002-02-01
+ <dd> Thirteenth snapshot release,
+   <a href="download.html">libstdc++-v3.0.96</a>.
  <dt>2001-12-18
- <dd> Twelfth snapshot release, <a href="download.html">libstdc++-v3.0.95</a>.
+ <dd> Twelfth snapshot release, libstdc++-v3.0.95.
  <dt>2001-06-18
  <dd> First major compiler release using libstdc++-v3 by default,
    <a href="http://gcc.gnu.org/gcc-3.0/">GCC 3.0</a>.
