* compile.html: Fixed grammatical errors. 	* faq.html: Use "optimize", not "optimise".

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -72,7 +72,7 @@
             <li><a href="#5_6">How can I profile my application?</a> 
 	    <li><a href="#5_7">My program seems to hang and doesn't produce any output</a>
           </ol>
-        <li><a href="#6_0">Programing Issues</a> 
+        <li><a href="#6_0">Programming Issues</a> 
           <ol>
             <li><a href="#6_1">Are there any examples of how to use CNI?</a></li>
 	    <li><a href="#6_2">Is it possible to invoke GCJ compiled Java code from a C++ application?</a></li>
@@ -421,7 +421,7 @@ $ ../configure [...]
       <dl> 
         <dd>GCJ will compile both source <code>(.java)</code> and bytecode 
 	  <code>(.class)</code> files. However, in many cases the native code produced 
-	  by compiling from source is better optimised than that compiled from .class 
+	  by compiling from source is better optimized than that compiled from .class 
 	  files. 
 	  
         <p><a href="mailto:per@bothner.com">Per Bothner</a> explains: </p>
@@ -653,7 +653,7 @@ $ ../configure [...]
       <table width="100%" border="0">
         <tr bgcolor="#B0D0FF" align="left"> 
           <th> 
-            <h2><a name="6_0"></a>Programing Issues </h2>
+            <h2><a name="6_0"></a>Programming Issues </h2>
           </th>
         </tr>
       </table>
