--- a/htdocs/java/compile.html
+++ b/htdocs/java/compile.html
@@ -61,7 +61,7 @@ single assembly file, object file, or executable, depending on the
 options you specify.</dd>
 
 <dt>.jar</dt>
-<dd>A .jar (Java ARchive) file is file in .zip format, but following
+<dd>A .jar (Java ARchive) file is in .zip format, but following
 certainly extra conventions. (Certain extra files should also be
 included.)  GCJ treats it the same as a .zip file.</dd>
 
@@ -74,7 +74,7 @@ options:
 
 <dl>
 <dt>-C</dt>
-<dd>The input file(s) must be all be .java source files. They are compiled
+<dd>The input file(s) must all be .java source files. They are compiled
 into portable .class files. No machine code (.o files or executable)
 is generated.</dd>
 
@@ -106,16 +106,23 @@ header is any .zip file installed as part of the compiler system.</dd>
 <dt>--main=CLASSNAME</dt>
 <dd>When linking an application, generate a stub so the application starts
 executing with the main method of the class named. (This option is
-ignored if you are only compiling and not linking.)  Path searching
-options At compile time, GCJ uses a list of paths to search for
-classes and packages that it needs to find. This list is called the
+ignored if you are only compiling and not linking.)</dd>
+
+</dl>
+
+<h3>Path searching options</h3>
+
+<p>At compile time, GCJ uses a list of paths to search for classes and
+packages that it needs to find. This list is called the
 classpath. Each element of the classpath can be either a directory or
 the name of a .zip or .jar file. In the latter case, GCJ searches the
 contents of the file for the required information.  GCJ has a built-in
 classpath, which includes the directory ., and the system libgcj.zip
 file, which holds classes from the standard Java class libraries, such
-as java.lang.  There are several ways to set or augment the classpath.</dd>
+as java.lang.  There are several ways to set or augment the
+classpath.</p>
 
+<dl>
 <dt>-I directory</dt>
 <dd>A directory (or file) specified using -I are prepended to the
 classpath. -I options are never overridden by the other options listed
