--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -190,6 +190,7 @@
     <li>A fix for shared library generation under AIX 4.3.</li>
     <li>Documentation updates.</li>
     <li>Port of GCC to Tensilica's Xtensa processor contributed.</li>
+    <li>A fix for compiling the PPC Linux kernel (FAT fs wouldn't link).</li>
   </ul></li>
 
 </ul>
