--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -129,6 +129,13 @@ archived mail messages that reported the builds.</p>
 </tr>
 
 <tr>
+<td>alphaev68-unknown-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.3, kernel 2.4.3-12</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg00054.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>hppa1.1-hp-hpux10.10</td>
 <td>&nbsp;</td>
 <td>Successful (except fastjar):
@@ -187,6 +194,13 @@ Successful (C):
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77):
 <a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00175.html">3.0</a></td>
+</tr>
+
+<tr>
+<td>i386-pc-sco3.2v5.0.5</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg00141.html">3.0.3</a></td>
 </tr>
 
 <tr>
@@ -342,7 +356,9 @@ Unsuccessful:
 <td>i686-pc-cygwin</td>
 <td>Cygwin-1.3.5-3 on Windows XP Professional</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00946.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00946.html">3.0.3</a>;
+Successful with modifications:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg00119.html">3.0.3</a></td>
 </tr>
 
 <tr>
