Add rs6000-ibm-aix4.3.3.0 for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -656,6 +656,13 @@ Successful with modifications:
 </tr>
 
 <tr>
+<td>rs6000-ibm-aix4.3.3.0</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg00370.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>s390-linux-gnu</td>
 <td>Supported beginning with 3.0.1</td>
 <td>Successful:
