--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -212,7 +212,8 @@ contributors.</p>
 <p>If you find a bug, but you are not fixing it (yet):</p>
 <ol>
 <li>Create a (minimal) test-case.</li>
-<li>Add the test-case to our test-suite, marking it as XFAIL.</li>
+<li>Add the test-case to our test-suite, marking it as XFAIL unless
+the bug is a regression.</li>
 <li>Add a bug report referencing the test-case to GNATS.</li>
 </ol>
 
