--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -153,6 +153,13 @@ and automated testers</a> to maintain and improve quality.
 
 <dl>
 
+<dt><b>February 9, 2002</b></dt>
+<dd>
+Alexandre Oliva, of <a href="http://www.redhat.com/">Red Hat,
+Inc.</a>, has contributed a port to the SuperH SH5 64-bit RISC
+microprocessor architecture, extending the existing SH port.</a>.
+</dd>
+
 <dt><b>January 24, 2002</b></dt>
 <dd>
 <a href="http://www.tensilica.com/">Tensilica</a> has contributed 
