--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -108,7 +108,7 @@ answering questions and reviewing patches as time permits.</p>
     <td><a href="mailto:obrien@freebsd.org">David O'Brien</a></td>
 <tr><td>PowerPC  <td>GNU/Linux           <td>
 <tr><td>SPARC    <td>SunOS 4.1.4         <td>sparc-sun-sunos4.1.4
-<tr><td>SPARC    <td>Debian GNU/Linux 2.2<td>sparc-linux
+<tr><td>SPARC    <td>Debian GNU/Linux 2.2<td>sparc-sun-linux-gnu
     <td><a href="mailto:bcollins@debian.org">Ben Collins</a>
 <tr><td>ARM      <td>GNU/Linux           <td>armv4l-unknown-linux-gnu
 <tr><td>Intel x86<td>Cygwin              <td>i686-pc-cygwin
