2009 (MMIX) isn't a prime.  Doh!

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -226,7 +226,7 @@ tahoe. These are listed here just for completeness.
  
  <li>MMIX
    <br />Manufacturer: none.  There is a simulator, see links below.
-   <br />Acronym stands for: Roman numeral for 2009 (a prime), pronounced
+   <br />Acronym stands for: Roman numeral for 2009, pronounced
    [EM-micks].  The number stands for the average of numbers of "14
    actual computers very similar to MMIX".  The name may also be due to a
    predecessor appropriately named MIX.
