Make markup XHTML 1.0 compliant. By Andrea 'Fyre Wyzard' Bocci <fwyzard@inwind.it>.

--- a/htdocs/egcs-1.0/caveats.html
+++ b/htdocs/egcs-1.0/caveats.html
@@ -9,32 +9,32 @@
   <li>EGCS has an integrated libstdc++, but does not have an integrated libg++.
   Furthermore old libg++ releases will not work with egc; HJ Lu has made a 
   libg++-2.8.1.2 available which may work with EGCS.
-  <br>Note most C++ programs only need libstdc++.
+  <br />Note most C++ programs only need libstdc++.</li>
 
   <li>Note that using -pedantic or -Wreturn-type can cause an explosion in the
   amount of memory needed for template-heavy C++ code, such as code that uses
   STL.  Also note that -Wall includes -Wreturn-type, so if you use -Wall you
-  will need to specify -Wno-return-type to turn it off.
+  will need to specify -Wno-return-type to turn it off.</li>
 
   <li> Exception handling may not work with shared libraries, particularly
   on alphas, hppas, and mips based platforms.  Exception handling is known
-  to work on x86-linux platforms with shared libraries.
+  to work on x86-linux platforms with shared libraries.</li>
 
   <li> Some versions of the Linux kernel have bugs which prevent them
   from being compiled or from running when compiled by EGCS.  See
   <a href="http://gcc.gnu.org/fom_serv/cache/24.html">the FAQ</a>
-  for additional information.
+  for additional information.</li>
 
   <li> In general, EGCS is more rigorous about rejecting invalid C++ code
   or deprecated C++ constructs than G++ 2.7.  As a result it may be necessary
-  to fix C++ code before it will compile with EGCS.
+  to fix C++ code before it will compile with EGCS.</li>
 
   <li>G++ is also aggressively tracking the C++ standard; as a result code
   which was previously valid (and thus accepted by other compilers and older
-  versions of G++) may no longer be accepted.
+  versions of G++) may no longer be accepted.</li>
 
   <li>EGCS 1.0 may not work with Red Hat Linux 5.0 on all targets.  EGCS 1.0.x
-  and later releases should work with Red Hat Linux 5.0.
+  and later releases should work with Red Hat Linux 5.0.</li>
 </ul>
 
 </body>
