--- a/htdocs/egcs-1.0/c++features.html
+++ b/htdocs/egcs-1.0/c++features.html
@@ -65,7 +65,7 @@
      + Explicit instantiation of template constructors and destructors is
        now supported.  For instance:
 
-            template A&lt;int>::A(const A&);
+            template A&lt;int&gt;::A(const A&amp;);
 
   Still not supported:
 
@@ -157,7 +157,7 @@
   functionally identical to the c++ driver.
 
 * (void *)0 is no longer considered a null pointer constant; NULL in
-  &lt;stddef.h> is now defined as __null, a magic constant of type (void *)
+  &lt;stddef.h&gt; is now defined as __null, a magic constant of type (void *)
   normally, or (size_t) with -ansi.
 
 * The name of a class is now implicitly declared in its own scope; A::A
@@ -189,12 +189,12 @@
 *** The g++ team thanks everyone that contributed to this release,
     but especially:
 
-* Joe Buck <jbuck@synopsys.com>, the maintainer of the g++ FAQ.
-* Brendan Kehoe <brendan@cygnus.com>, who coordinates testing of g++.
-* Jason Merrill <jason@cygnus.com>, the g++ maintainer.
-* Mark Mitchell <mmitchell@usa.net>, who implemented member function 
+* Joe Buck &lt;jbuck@synopsys.com&gt;, the maintainer of the g++ FAQ.
+* Brendan Kehoe &lt;brendan@cygnus.com&gt;, who coordinates testing of g++.
+* Jason Merrill &lt;jason@cygnus.com&gt;, the g++ maintainer.
+* Mark Mitchell &lt;mmitchell@usa.net&gt;, who implemented member function 
   templates and explicit qualification of function templates.
-* Mike Stump <mrs@wrs.com>, the previous g++ maintainer, who did most of
+* Mike Stump &lt;mrs@wrs.com&gt;, the previous g++ maintainer, who did most of
   the exception handling work.
 </pre>
 
