Fix markup and a typo.

--- a/htdocs/projects/cfg.html
+++ b/htdocs/projects/cfg.html
@@ -469,9 +469,9 @@ duplication.</li>
 <ul>
 <li>Avoid rebuilding the  CFG for <code>toplev.c</code>.</li>
 
-<li>Opcode heuristics tweak.</li>
-<p>Avoid predicting comparisons for equality to 0 and floating point comparisons
-to increase hitrate of opcode heursitic.</p>
+<li>Opcode heuristics tweak:
+Avoid predicting comparisons for equality to 0 and floating point comparisons
+to increase hitrate of opcode heuristic.</li>
 </ul>
 
 <h2>Branch Status</h2>
