--- a/htdocs/egcs-1.1/news.html
+++ b/htdocs/egcs-1.1/news.html
@@ -334,7 +334,7 @@ New feature for Solaris systems:
     GCC installation no longer makes a copy of system include files,
     thus insulating GCC better from updates to the operating system.
 
-
+
 Noteworthy changes in GCC version 2.7.2
 ---------------------------------------
 
@@ -366,7 +366,7 @@ sequence used in GCC version 2.7.0.  That calling sequence was based on the AIX
 calling sequence without function descriptors.  To compile code for that older
 calling sequence, either configure the compiler for powerpc-*-eabiaix or use
 the -mcall-aix switch when compiling and linking.
-
+
 Noteworthy changes in GCC version 2.7.0
 ---------------------------------------
 
@@ -476,11 +476,11 @@ Changes to Objective-C:
 GCC now supports the ISO Normative Addendum 1 to the C Standard.
 As a result:
 
-    The header <iso646.h> defines macros for C programs written
+    The header &lt;iso646.h&gt; defines macros for C programs written
     in national variants of ISO 646.
 
     The following digraph tokens are supported:
-	<:	:>	<%	%>	%:	%:%:
+	&lt;:	:&gt;	&lt;%	%&gt;	%:	%:%:
     These behave like the following, respectively:
 	[	]	{	}	#	##
 
@@ -534,7 +534,7 @@ catch parameter type.  Optimization is NOT SUPPORTED with
 
 Support for Run-Time Type Identification has been added with -frtti.
 This support is still in alpha; one major restriction is that any file
-compiled with -frtti must include <typeinfo.h>.
+compiled with -frtti must include &lt;typeinfo.h&gt;.
 
 Preliminary support for namespaces has been added.  This support is far
 from complete, and probably not useful.
@@ -546,7 +546,7 @@ The parsing of expressions such as `a ? b : c = 1' has changed from
 `(a ? b : c) = 1' to `a : b ? (c = 1)'.
 
 The code generated for testing conditions, especially those using ||
-and &&, is now more efficient.
+and &amp;&amp;, is now more efficient.
 
 The operator keywords and, and_eq, bitand, bitor, compl, not, not_eq,
 or, or_eq, xor and xor_eq are now supported.  Use -ansi or
@@ -579,7 +579,7 @@ new and delete of const types is now allowed (with no additional
 semantics).
 
 Explicit instantiation of template methods is now supported.  Also,
-'inline template class foo<int>;' can be used to emit only the vtable
+'inline template class foo&lt;int&gt;;' can be used to emit only the vtable
 for a template class.
 
 With -fcheck-new, g++ will check the return value of all calls to
@@ -587,7 +587,7 @@ operator new, and not attempt to modify a returned null pointer.
 
 The template instantiation code now handles more conversions when
 passing to a parameter that does not depend on template arguments.
-This means that code like 'string s; cout << s;' now works.
+This means that code like 'string s; cout &lt;&lt; s;' now works.
 
 Invalid jumps in a switch statement past declarations that require
 initializations are now caught.
@@ -600,7 +600,7 @@ that only one out-of-line definition is used.
 
 collect2 now demangles linker output, and c++filt has become part of
 the gcc distribution.
-
+
 Noteworthy changes in GCC version 2.6.3:
 
 A few more bugs have been fixed.
@@ -623,7 +623,7 @@ The following new configurations are supported:
 	Sequent DYNIX/ptx 1.x and 2.x.
 	Both COFF and ELF configurations on AViiON without using /bin/gcc
 	Windows/NT on x86 architecture; preliminary
-	AT&T DSP1610 digital signal processor chips
+	AT&amp;T DSP1610 digital signal processor chips
 	i960 systems on bare boards using COFF
 	PDP11; target only and not extensively tested
 
@@ -639,12 +639,12 @@ object files.
 The use of positional arguments to the configure script is no longer
 recommended.  Use --target= to specify the target; see the GCC manual.
 
-The 386 now supports two new switches: -mreg-alloc=<string> changes
+The 386 now supports two new switches: -mreg-alloc=&lt;string&gt; changes
 the default register allocation order used by the compiler, and
 -mno-wide-multiply disables the use of the mul/imul instructions that
 produce 64 bit results in EAX:EDX from 32 bit operands to do long long
 multiplies and 32-bit division by constants.
-
+
 Noteworthy changes in GCC version 2.6.0:
 
 Numerous bugs have been fixed, in the C and C++ front-ends, as
@@ -661,7 +661,7 @@ Here are some new features added from the latest working paper:
 	* built-in boolean type 'bool', with constants 'true' and 'false'.
 	* array new and delete (operator new [] and delete []).
 	* WP-conforming lifetime of temporaries.
-	* explicit instantiation of templates (template class A<int>;),
+	* explicit instantiation of templates (template class A&lt;int&gt;;),
           along with an option (-fno-implicit-templates) to disable emission
           of implicitly instantiated templates, obsoletes -fexternal-templates.
 	* static member constants (static const int foo = 4; within the
@@ -757,7 +757,7 @@ machine-specific files.
 
 - The -ffast-math flag permits some optimization that violate strict
   IEEE rules, such as converting X * 0.0 to 0.0.
-
+
 Noteworthy changes in GCC version 2.5.8:
 
 This release only fixes a few serious bugs.  These include fixes for a
@@ -808,7 +808,7 @@ must recompile all C++ programs completely when you start using GCC
 2.5.  Also, GCC 2.5 requires libg++ version 2.5.  Earlier libg++
 versions won't work with GCC 2.5.  (This is generally true--GCC
 version M.N requires libg++ version M.N.)
-
+
 Noteworthy GCC changes in version 2.5:
 
 * There is now support for the IBM 370 architecture as a target.
@@ -931,7 +931,7 @@ future release.
 * The ANSI committee working on the C++ standard has adopted a new
   keyword `mutable'.  This will allow you to make a specific member be
   modifiable in an otherwise const class.
-
+
 Noteworthy GCC changes in version 2.4.4:
 
   A crash building g++ on various hosts (including m68k) has been
@@ -1020,7 +1020,7 @@ However, this mechanism is still in transition.
 * Named returned values let you avoid an extra constructor call
 when a function result has a class type.
 
-* The C++ operators <? and >? yield min and max, respectively.
+* The C++ operators &lt;? and &gt;? yield min and max, respectively.
 
 * C++ gotos can exit a block safely even if the block has
 aggregates that require destructors.
