--- a/htdocs/egcs-1.1/regress.html
+++ b/htdocs/egcs-1.1/regress.html
@@ -8,25 +8,25 @@
 
 <p>One of the critical steps in making releases is regression testing.  For
 EGCS 1.1 we want to perform regression tests against GCC 2.8.1 and 
-EGCS 1.0.3a.
+EGCS 1.0.3a.</p>
 
 <p>Since it is impossible to test every platform, we have selected a list
 of popular platforms for which EGCS 1.1 should have no regressions relative
-to EGCS 1.0.3a or GCC 2.8.1.
+to EGCS 1.0.3a or GCC 2.8.1.</p>
 
 <p>We encourage testing of platforms not on the official regression test
 list.  However, the "no regressions" policy does not necessarily apply
-to targets not on the official regression test list.
+to targets not on the official regression test list.</p>
 
-<p>Contact law@cygnus.com directly if you
-want to help with the regression testing phase of the EGCS 1.1 release cycle.
+<p>Contact law@cygnus.com directly if you want to help with the regression
+testing phase of the EGCS 1.1 release cycle.</p>
 
 <h2>How to run the regression tests</h2>
 
 <p>  First, you must get out of the EGCS object directory.  So change 
-     directories into your home directory, /tmp or somewhere else.
+     directories into your home directory, /tmp or somewhere else.</p>
 
-<p>  Second, you need an appropriate site.exp.  Here is a template:
+<p>  Second, you need an appropriate site.exp.  Here is a template:</p>
 
 <pre>
 # snapdir should point to the top-level directory of an unpacked EGCS 1.1
@@ -45,9 +45,9 @@ set G77_UNDER_TEST "$old_release_prefix/bin/g77"
 </pre>
 
 <p>Obviously you have to change "snapdir" and "old_release_prefix" to
-appropriate values.
+appropriate values.</p>
 
-<p>Then run the tests with the following commands:
+<p>Then run the tests with the following commands:</p>
 
 <pre>
   runtest --tool gcc
@@ -57,15 +57,15 @@ appropriate values.
 
 
 <p>This will create "gcc.sum", "g++.sum" and "g77.sum".  You should send
-those files to the testing coordinator law@cygnus.com.
+those files to the testing coordinator law@cygnus.com.</p>
 
 <p>Note that you will receive many failures from GCC 2.8.1 and EGCS 1.0.3a when
 running the gcc testsuites because those versions of the compiler do not
-support -Os.
-<hr>
+support -Os.</p>
+<hr />
 
 <h2>Current Regression Testing Status</h2>
-<p>
+
 <table border="0">
 <tr>
 <th>
@@ -503,7 +503,7 @@ NONE
 
 <p>*Note Everything is failing gcc.dg/980626-1.c.  It's a bogus warning
 test, so I don't consider it critical, but I have asked for a volunteer
-to look into the problem.
+to look into the problem.</p>
 
 </body>
 </html>
