--- a/htdocs/egcs-1.1/egcs-1.1-test.html
+++ b/htdocs/egcs-1.1/egcs-1.1-test.html
@@ -6,65 +6,67 @@
 <h1>EGCS 1.1 test strategy</h1>
 
 <ul>
-  <li> <a href="regress.html">No testsuite regressions on major platforms</a>.  DONE.
+  <li> <a href="regress.html">No testsuite regressions on major platforms</a>.  
+       DONE.</li>
 
   <li> libg++ addon builds and passes on same platforms as we do testsuite
-       regressions on.  DONE.
+       regressions on.  DONE.</li>
 
   <li> Builds glibc and passes glibc testsuite on major supported platforms
        (x86, alpha, SPARC).  Testing on powerpc and m68k would also be
        appreciated.
 
-       <br>We are testing a development version of glibc.  The sources for
+       <br />We are testing a development version of glibc.  The sources for
        testing can be found on the egcs ftp server.
  
-       <br>x86 has successfully passed the glibc test.
-       <br>ppc has passed using different versions of the glibc sources
-       <br>alpha "passed" (failures were glibc problems, not compiler problems).
-       <br>SPARC builds and passes all glibc testsuites.
-
+       <br />x86 has successfully passed the glibc test.
+       <br />ppc has passed using different versions of the glibc sources
+       <br />alpha "passed" (failures were glibc problems, not compiler problems).
+       <br />SPARC builds and passes all glibc testsuites.
+       </li>
 
   <li> Linux kernel builds and runs (and 2.1.115).  Platforms will be
-       x86, alpha.  SPARC & PowerPC kernel tests would also be greatly
+       x86, alpha.  SPARC &amp; PowerPC kernel tests would also be greatly
        appreciated.
 
-       <br>x86 has passed the kernel test (2.1.115)
+       <br />x86 has passed the kernel test (2.1.115)
 
-       <br>PowerPC has passed using different versions of the kernel
+       <br />PowerPC has passed using different versions of the kernel
 
-       <br>Alpha has had problems with 2.1.115, 2.1.116.  Some success with
+       <br />Alpha has had problems with 2.1.115, 2.1.116.  Some success with
        2.1.117, but it still locks up.  Could be a kernel problem.  A different
        person has reported success with 2.1.115 through 2.1.118.
 
-       <br>SPARC and SPARC64 linux kernels successfully build work work
-       for non-SMP configurations.p
+       <br />SPARC and SPARC64 linux kernels successfully build and work
+       for non-SMP configurations.
+       </li>
        
   <li> Red Hat 5.1 builds without errors on x86, Alpha.  
        <ul>
 	<li> x86 failures
 	  <ul>
 	    <li> There are minor C++ violations in guavac, sgml-tools and
-		 linuxconf.  These are not EGCS failures.
+		 linuxconf.  These are not EGCS failures.</li>
 	    <li> We've built all the appropriate SRPMS and installed the
-		 resulting binaries, then rebuilt the SRPMS again.
-	  </ul>
+		 resulting binaries, then rebuilt the SRPMS again.</li>
+	  </ul></li>
 	<li> Alpha failures  I've been told this was about 90% done.  Not
-	     sure if there are any compiler problems to deal with.
-	<li> SPARC failures
-	<li> PowerPC failures
-       </ul>
+	     sure if there are any compiler problems to deal with.</li>
+	<li> SPARC failures</li>
+	<li> PowerPC failures</li>
+       </ul></li>
 
   <li> RTEMS builds on the following RTEMS targets:
        <ul>
-          <li> hppa1.1
-	  <li> i386, i386-elf, i386-go32
-	  <li> i960
-          <li> m68k
-          <li> mips64orion
-          <li> powerpc
-          <li> sh, sh-elf
-          <li> SPARC
-       </ul>
+          <li> hppa1.1</li>
+	  <li> i386, i386-elf, i386-go32</li>
+	  <li> i960</li>
+          <li> m68k</li>
+          <li> mips64orion</li>
+          <li> powerpc</li>
+          <li> sh, sh-elf</li>
+          <li> SPARC</li>
+       </ul></li>
 </ul>
 
 </body>
