Add alphaev67-dec-osf5.1 for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -118,7 +118,8 @@ archived mail messages that reported the builds.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00432.html">3.0</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00762.html">3.0.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00762.html">3.0.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg00664.html">3.0.3</a></td>
 </tr>
 
 <tr>
