Add i386-sequent-sysv4 for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -247,6 +247,13 @@ Successful (C):
 </tr>
 
 <tr>
+<td>i386-sequent-sysv4</td>
+<td>DYNIX/ptx V4.6.1, binutils 2.11.2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg00743.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>i386-unknown-freebsd4.2</td>
 <td>&nbsp;</td>
 <td>Successful:
