* projects/cpplib.html: Fix typo.

--- a/htdocs/projects/cpplib.html
+++ b/htdocs/projects/cpplib.html
@@ -27,7 +27,7 @@ varargs macros in traditional mode is a deliberate feature.</p>
 
   <li>The lexical analyzer has been re-worked to permit stepback.</li>
 
-  <li>Updates so that cpplib works correctly on VMS has been contributed
+  <li>Updates so that cpplib works correctly on VMS have been contributed
       by Douglas Rupp.</li>
 </ol>
 
